--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -38,7 +38,7 @@ body {
     }
 }
 
-.title-input {
+.title-input, .writer-input {
     padding: 10px;
     border: none;
     outline: none;
@@ -128,3 +128,49 @@ body {
     top: 25px;
 }
 
+.input-else {
+    color: #ccc;
+    font-size: 15px;
+}
+
+.note-bottom {
+    text-align: right;
+}
+
+.date-text {
+    font-style: italic;
+    font-size:15px;
+    padding:3px;
+    background-color: lightgoldenrodyellow;
+}
+
+.writer-text {
+    padding:3px;
+    font-size:15px;
+}
+
+#img-writer {
+    width: 15px;
+    height: 15px;
+}
+
+.due-label {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.selectcolor {
+    padding-left: 10px;
+}
+
+.more {
+    position: absolute;
+    right: 45px;
+    top: 25px;
+}
+
+.menuselect {
+    position: absolute;
+    right: 5px;
+    top: 50px;
+}
