--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -128,7 +128,7 @@ body {
     top: 25px;
 }
 
-.input-else, .selectcolor {
+.input-else, .selects {
     font-size: 15px;
 }
 
@@ -158,7 +158,7 @@ body {
     padding-right: 5px;
 }
 
-.selectcolor {
+.selects {
     padding-left: 10px;
 }
 
@@ -184,4 +184,36 @@ body {
     position: absolute;
     right: 70px;
     top: 25px;
+}
+
+.bar {
+    position: sticky;
+    top: 0px;
+    z-index: 5;
+    padding: 20px;
+    padding-left: 30px;
+    background-color: white;
+}
+
+.bar-comp {
+    font-family: "Comic Sans MS";
+    font-size: 15px;
+    display: inline;
+    margin: 5px;
+    padding: 5px;
+    padding-left: 30px;
+    padding-right: 30px;
+    background-color: #ccc;
+    border-radius: 30px 1px;
+    box-shadow: 0 0.25rem 0.25rem rgba(0,0,0,.15);
+}
+
+#note-filter {
+    font-family: "Comic Sans MS";
+    background-color: #ccc;
+    border: none;
+}
+
+#favcolor {
+    margin-right:55px;
 }
