Add Search component(1)

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -185,3 +185,32 @@ body {
     right: 70px;
     top: 25px;
 }
+
+.fa-search {
+    width: 50px;
+    height: 40px;
+    line-height: 40px;
+    display: block;
+    text-align: center;
+    border-radius: 1.5em;
+    font-size: 1rem;
+    background: gold;
+}
+
+.noteSearchMenu {
+    position: relative;
+    margin-left: auto; 
+    margin-right: auto;
+    width: 30%;
+    display: flex;
+    height: 40px;
+    font-weight: 100;
+}
+
+.noteSearchMenu input[type="search"] {
+    flex: 1;
+    margin-right: 10px;
+    border: 0;
+    border-radius: 1.5em;
+    font-size: 1rem;
+  }
