Add Search component(2)

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -194,6 +194,7 @@ body {
     text-align: center;
     border-radius: 1.5em;
     font-size: 1rem;
+    cursor: pointer;
     background: gold;
 }
 
