--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -93,7 +93,6 @@ body {
     margin: 50px 25px;
 }
 
-
 .note {
     position: relative;
     border-radius: 3px;
@@ -109,7 +108,7 @@ body {
     margin: 0 0 1em;
     width: 100%;
     background: #fff;
-    padding: 25px;
+    padding: 20px;
     word-break: break-word;
     cursor: pointer;
     grid-row-end: span 1;
@@ -184,4 +183,31 @@ body {
     position: absolute;
     right: 70px;
     top: 25px;
+}
+
+.note-directory {
+    border: 2px solid black;
+    background-color: yellow;
+    width: 100%;
+    overflow: scroll;
+}
+
+.noteContainer {
+    background-color: aquamarine;
+    margin: 0px 25px;
+    width: 80%;
+}
+
+.allNote {
+    display: flex;
+}
+
+.noteList {
+    position: relative;
+    width: 20%;
+    top: -30px;
+    margin: 0px 25px 0px 0px;
+    h2 {
+        text-align: center;
+    }
 }
