--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -186,16 +186,17 @@ body {
 }
 
 .note-directory {
-    border: 2px solid black;
-    background-color: yellow;
     width: 100%;
-    overflow: scroll;
+    height: 500px;
+    overflow: auto;
+    padding: 5px;
+    background-color: limegreen;
 }
 
 .noteContainer {
     background-color: aquamarine;
-    margin: 0px 25px;
     width: 80%;
+    height: 100%;
 }
 
 .allNote {
@@ -210,4 +211,11 @@ body {
     h2 {
         text-align: center;
     }
+}
+
+.listNote {
+    background-color: lightyellow;
+    padding: 5px;
+    margin: 3px;
+    border-radius: 5px 5px 5px 5px;
 }
