--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -189,12 +189,10 @@ body {
     width: 100%;
     height: 500px;
     overflow: auto;
-    padding: 5px;
     background-color: limegreen;
 }
 
 .noteContainer {
-    background-color: aquamarine;
     width: 80%;
     height: 100%;
 }
@@ -216,6 +214,9 @@ body {
 .listNote {
     background-color: lightyellow;
     padding: 5px;
-    margin: 3px;
+    margin: 5px;
     border-radius: 5px 5px 5px 5px;
+    a{
+        text-decoration: none;
+    }
 }
