--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -35,6 +35,7 @@ body {
     & img {
         margin-left:25px;
         height:50px;
+        cursor: pointer;
     }
 }
 
@@ -196,6 +197,19 @@ body {
     font-size: 1rem;
     cursor: pointer;
     background: gold;
+}
+
+.fa-undo {
+    width: 50px;
+    height: 40px;
+    line-height: 40px;
+    margin-left: 4px;
+    display: block;
+    text-align: center;
+    border-radius: 1.5em;
+    font-size: 1rem;
+    cursor: pointer;
+    background: rgb(154, 224, 48);
 }
 
 .noteSearchMenu {
