--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -215,7 +215,5 @@ body {
     padding: 5px;
     margin: 5px;
     border-radius: 5px 5px 5px 5px;
-    a{
-        text-decoration: none;
-    }
+    cursor: pointer;
 }
