--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -295,3 +295,9 @@ body {
     border-radius: 5px 5px 5px 5px;
     cursor: pointer;
 }
+
+.note-title {
+    font-weight: bold;
+    position: relative;
+    margin-top: 30px;
+}
