--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -69,7 +69,9 @@ body {
     padding: 16px;
     box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
     border-radius: 3px;
-    textarea {
+    .tArea {
+        font-size: 13px;
+        height: 180px;
         padding: 10px;
         resize: none;
         border: none;
