--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -320,3 +320,30 @@ body {
 .input-search {
     padding-left: 10px;
 }
+
+.banner {
+    position: relative;
+    width: 1000px;
+    height: 600px;
+    margin:0 auto;
+    padding:0; 
+    overflow: hidden;
+}
+.banner ul {
+    position: absolute;
+    margin: 0px; 
+    padding:0; 
+    list-style: none; 
+}
+.banner ul li {
+    float: left;
+    width: 1000px; 
+    height: 600px; 
+    margin:0; 
+    padding:0;
+}
+
+.banner ul li img {
+    width: 1000px; 
+    height: 600px; 
+}
