--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -207,14 +207,14 @@ body {
     padding: 5px;
     padding-left: 30px;
     padding-right: 30px;
-    background-color: #ccc;
+    background-color: rgb(143, 145, 248);
     border-radius: 30px 1px;
     box-shadow: 0 0.25rem 0.25rem rgba(0,0,0,.15);
 }
 
 #note-filter {
     font-family: "Comic Sans MS";
-    background-color: #ccc;
+    background-color: rgb(143, 145, 248);
     border: none;
 }
 
