Add teachable machine code (webcam)

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -320,3 +320,13 @@ body {
 .input-search {
     padding-left: 10px;
 }
+
+.input-image {
+    margin-top: 20px;
+    font-size: 15px;
+}
+
+.upload-button {
+    margin-left: 10px;
+    margin-bottom: 20px;;
+}
