--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -336,3 +336,16 @@ body {
 #output {
     visibility: hidden;
 }
+
+.image-predict-button, .image-delete-button {
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 3px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+#im {
+    margin-top: 10px;
+}
