--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -52,9 +52,9 @@ body {
 }
 
 
-.add-btn {
+.add-btn, .del-btn{
     padding: 5px 10px;
-    margin: 20px;
+    margin-left: 10px;
     border: none;
     color: #000;
     outline: none;
