--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -103,6 +103,17 @@ body {
     height: 100%;
 }
 
+.homeNoteContainer {
+    column-count: 4;
+    column-gap: 1em;
+    padding: 25px;
+    margin-bottom: 50px;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+}
+
+
 .note {
     position: relative;
     border-radius: 3px;
