--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -381,6 +381,13 @@ body {
     height: 600px; 
 }
 
+.nlogin {
+    cursor: pointer;
+    float: right;
+    margin-left: auto;
+    margin-right: 30px;
+}
+
 .homeHeader {
     display: flex;
     align-items: center;
