--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -483,3 +483,51 @@ body {
     font-weight: bold;
     color: rgb(143, 145, 248)
 }
+
+#roadmapTop {
+    width: 100%;
+    height:70px;
+    padding: 10px;
+    text-align: center;
+    background-color: rgb(143, 145, 248)
+}
+
+#roadmapCategory {
+    width: 100%;
+    padding: 10px;
+    float: right;
+    background-color: rgb(143, 145, 248);
+    margin-bottom: 10px;
+}
+
+#btn-category {
+	box-shadow:inset 0px 0px 0px 0px #fce2c1;
+	background:linear-gradient(to bottom, #ffc477 5%, #fb9e25 100%);
+	background-color:#ffc477;
+	border-radius:42px;
+	border:2px solid #eeb44f;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+    font-weight:bold;
+    
+	padding:7px 15px;
+	text-decoration:none;
+    text-shadow:0px 0px 50px #cc9f52;
+    margin-right: 5px;
+}
+
+#btn-category:hover {
+	background:linear-gradient(to bottom, #fb9e25 5%, #ffc477 100%);
+	background-color:#fb9e25;
+}
+
+#btn-category:active {
+	position:relative;
+	top:1px;
+}
+
+
+  
